<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:contentDescription="@string/logobg"
        android:scaleX="1.245"
        android:src="@drawable/logoinbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/lang"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.064" />


</androidx.constraintlayout.widget.ConstraintLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_line"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_or_sign_up"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/country_input_bg"
        android:elevation="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/countryBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/ind"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:elevation="15dp"
            android:layout_marginStart="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:counterMaxLength="10"
                app:counterEnabled="true"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:background="@drawable/country_input_bg"
                    android:textColorHint="@color/black"
                    android:hint="@string/enter_phone_number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="25sp"
            android:elevation="15dp"
            android:background="@drawable/btnbg"
            android:text="@string/continuebtn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height=".5in"
            android:elevation="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/loginbg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".4"
            android:scaleY=".4"
            android:src="@drawable/google"
            android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height=".5in"
            android:background="@drawable/loginbg"
            android:elevation="25dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:scaleX=".5"
                android:scaleY=".5"
                android:src="@drawable/facebook" />
</LinearLayout>
    </LinearLayout>


</LinearLayout>
</LinearLayout>